[gd_scene load_steps=3 format=2]

[ext_resource path="res://ui/default_theme.tres" type="Theme" id=1]
[ext_resource path="res://ui/PauseMenu.gd" type="Script" id=2]

[node name="PauseMenu" type="PopupPanel"]
pause_mode = 2
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -108.0
margin_top = -56.0
margin_right = 108.0
margin_bottom = 56.0
theme = ExtResource( 1 )
popup_exclusive = true
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 8.0
margin_top = 8.0
margin_right = 216.0
margin_bottom = 112.0
alignment = 1

[node name="Resume" type="Button" parent="VBoxContainer"]
margin_right = 208.0
margin_bottom = 32.0
text = "Resume"

[node name="Titlescreen" type="Button" parent="VBoxContainer"]
margin_top = 36.0
margin_right = 208.0
margin_bottom = 68.0
text = "Titlescreen"

[node name="Quit" type="Button" parent="VBoxContainer"]
margin_top = 72.0
margin_right = 208.0
margin_bottom = 104.0
text = "Quit"
[connection signal="about_to_show" from="." to="." method="_on_PauseMenu_about_to_show"]
[connection signal="popup_hide" from="." to="." method="_on_PauseMenu_popup_hide"]
[connection signal="pressed" from="VBoxContainer/Resume" to="." method="_on_Resume_pressed"]
[connection signal="pressed" from="VBoxContainer/Titlescreen" to="." method="_on_Titlescreen_pressed"]
[connection signal="pressed" from="VBoxContainer/Quit" to="." method="_on_Quit_pressed"]
